--- a/src/genefax/InstructionImage.fxml
+++ b/src/genefax/InstructionImage.fxml
@@ -21,7 +21,7 @@
                   <Image url="@SampleFile.png" />
                </image>
             </ImageView>
-            <Button fx:id="returnHome" layoutX="385.0" layoutY="444.0" mnemonicParsing="false" onAction="#goHome" text="I Understand">
+            <Button fx:id="triggerHomeViewBtn" layoutX="385.0" layoutY="444.0" mnemonicParsing="false" onAction="#goToHome" text="I Understand">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
