--- a/src/genefax/GeneFaxNewProject.fxml
+++ b/src/genefax/GeneFaxNewProject.fxml
@@ -28,7 +28,7 @@
             </Text>
             <TextField fx:id="foldchangeFileName" layoutX="121.0" layoutY="144.0" prefHeight="31.0" prefWidth="532.0" style="-fx-background-color: whitesmoke;" />
             <TextField fx:id="numOfReplicates" layoutX="631.0" layoutY="245.0" prefHeight="31.0" prefWidth="63.0" style="-fx-background-color: whitesmoke;" />
-            <Button fx:id="loadFileBtn" layoutX="54.0" layoutY="144.0" mnemonicParsing="false" onAction="#chooseFold" prefHeight="31.0" prefWidth="67.0" text="Load">
+            <Button fx:id="loadFileBtn" layoutX="54.0" layoutY="144.0" mnemonicParsing="false" onAction="#chooseFoldchangeFile" prefHeight="31.0" prefWidth="67.0" text="Load">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
@@ -56,12 +56,12 @@
             </Text>
             <TextField fx:id="conditionAFilename" layoutX="121.0" layoutY="245.0" />
             <TextField fx:id="conditionBFilename" layoutX="406.0" layoutY="245.0" />
-            <Button fx:id="triggerConditionBBtn" layoutX="339.0" layoutY="245.0" mnemonicParsing="false" onAction="#chooseConditionB" prefHeight="31.0" prefWidth="67.0" text="Load">
+            <Button fx:id="triggerConditionBBtn" layoutX="339.0" layoutY="245.0" mnemonicParsing="false" onAction="#chooseConditionBFile" prefHeight="31.0" prefWidth="67.0" text="Load">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
             </Button>
-            <Button fx:id="triggerConditionABtn" layoutX="54.0" layoutY="245.0" mnemonicParsing="false" onAction="#chooseConditionA" prefHeight="31.0" prefWidth="67.0" text="Load">
+            <Button fx:id="triggerConditionABtn" layoutX="54.0" layoutY="245.0" mnemonicParsing="false" onAction="#chooseConditionAFile" prefHeight="31.0" prefWidth="67.0" text="Load">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
